# ptmcmc

./: .gitignore  LICENSE.txt  Makefile  Makefile.ac  Makefile.ac.in  NOTICE.txt  bambi.cc  bayesian.cc  bayesian.hh  chain.cc  chain.hh  configure  configure.ac  dox.cfg  example.cc  exampleLISA.cc  mcmc.cc  mcmc.hh  options.hh  poly_example.cc  probability_function.cc  probability_function.hh  proposal_distribution.cc  proposal_distribution.hh  ptMCMC.hh  ptMCMCs.hh  ptmcmc.cc  ptmcmc.hh  restart.hh  sines.hh  state.cc  states.cc  states.hh  testGaussian.cc  testKL.cc  testMH  testMH.cpp  testPT.cpp  test_proposal.hh
ProbabilityDist/: Makefile  ProbabilityDist.cxx  ProbabilityDist.h  newran.h  newran1.cxx  newran2.cxx  simpstr.cxx  testProbDist.cxx
cython/: .gitignore  LISAsymmetries.py  Makefile  Untitled.ipynb  bayesian.pxd  exampleGaussian.py  exampleLISA.py  exampleLISA_views.ipynb  notes.txt  options.pxd  proposal_distribution.pxd  ptmcmc.pxd  ptmcmc.pyx  setup.py  setupV2.py  states.pxd  testKL.py  test_proposal.pxd  test_proposal.pyx
python/: KLdiv.py  comparechains.py  corner_with_covar.py  covar.py  ess.py  ptmcmc_analysis.py  view_process.py  view_projection.py
python/socket_interface/: Makefile  README.md  likelihood_server.py  socket_sampler.cc
test/exampleLISA/: Makefile  exampleLISA_long_test_0.out  exampleLISA_test_0.out
